<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shopViewModel"
            type="hanu.a2_1801040147.viewModels.ShopViewModel" />

        <import type="hanu.a2_1801040147.utils.CurrencyFormatter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="hanu.a2_1801040147.views.ProductDetailFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/productImageView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/product_image"
                    android:productImage="@{shopViewModel.product.thumbnail}"
                    android:scaleType="fitCenter" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/productNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{shopViewModel.product.name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{CurrencyFormatter.format(shopViewModel.product.unitPrice)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_product_description"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/textSecondary" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_to_cart_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:contentDescription="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

